# order-book-watcher

./: CMakeLists.txt  README.md  vcpkg.json
data/: CMakeLists.txt
data/input/: first.json
data/output/: ADEN.txt  CFR.txt  CIMB.txt  EPMB.txt  GLO.txt  KING.txt  QUEEN.txt  REX.txt  SMGR.txt  UHR.txt
data/output-ground-truth/: 20.txt  ABBN.txt  NESN.txt  SONG.txt  TAK.txt  UBSG.txt  ZURN.txt
docs/: class-diagram.drawio
src/: CMakeLists.txt  config.hpp.tmpl  definitions.hpp  instrument_feeds_worker.cpp  instrument_feeds_worker.hpp  main.cpp  order_book_feeds_manager.cpp  order_book_feeds_manager.hpp
test/: CMakeLists.txt  instrument_feeds_worker_unittest.cpp  order_book_feeds_manager_unittest.cpp
tools/vscode/: settings.json
